--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,9 @@
 @import "tailwindcss";
 
+
+
 @theme {
-  --font-family-sans: "Inter", sans-serif;
+  --font-family-sans: "IBM Plex Sans Condensed", sans-serif;
 }
 
 :root {
